--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,10 @@
-.card-container div {
-  padding: 14.5%;
+.card-container {
+  display: flex;
+}
+
+.card {
+  vertical-align: top;
+  width: 14em;
+  height: 19.4em;
   background-repeat: no-repeat;
 }
