--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 .card-container {
   display: flex;
+  flex-wrap: wrap;
+  padding: 0 18px 0 18px;
 }
 
 .card {
@@ -8,3 +10,6 @@
   height: 19.4em;
   background-repeat: no-repeat;
 }
+
+/*this setting will be useful for creating a hand*/
+/*padding: 0 calc((100% - 180px * 5) / 10);*/
