--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
   width: 14em;
   height: 19.4em;
   background-repeat: no-repeat;
+  border-radius: 12px;
 }
 
 /*this setting will be useful for creating a hand*/
